--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ body {
 .card-heading {
 	margin: 1.3rem 0 0.5rem;
 	color: var(--clr-White);
+	font-size: 2.1rem;
 }
 
 .card-text {
@@ -97,6 +98,10 @@ body {
 .score-container {
 	display: flex;
 	justify-content: space-between;
+}
+
+.score-container button{
+	border: 0;
 }
 
 .score{
